--- a/public/stylesheets/backoffice/chosen.css
+++ b/public/stylesheets/backoffice/chosen.css
@@ -54,7 +54,7 @@
 }
 .chzn-container-single .chzn-single span {
   margin-right: 26px;
-  display: inline-block;
+  display: block;
   overflow: hidden;
   white-space: nowrap;
   -o-text-overflow: ellipsis;
